--- a/src/Middleware/src/Headstart.API/Headstart.API.csproj
+++ b/src/Middleware/src/Headstart.API/Headstart.API.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <Content Remove="AppSettings.json" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -39,5 +43,10 @@
     <Content Include="Web.Release.config">
       <DependentUpon>web.config</DependentUpon>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="appSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
